@startuml er_diagram
hide circle
skinparam backgroundColor #FFFFFF
skinparam defaultFontName "Helvetica"
skinparam entity {
  BackgroundColor #F1EFE8
  BorderColor #3C3489
  FontColor #2C2C2A
}
skinparam arrow {
  Color #1D9E75
  FontColor #26215C
}

' ===================== INVENTORY MODULE =====================
entity "categories" as categories {
  * id : INT <<PK>>
  --
  name : VARCHAR(100) <<unique>>
}

entity "suppliers" as suppliers {
  * id : INT <<PK>>
  --
  name : VARCHAR(255)
  contact_email : VARCHAR(255)
  contact_phone : VARCHAR(50)
  address : VARCHAR(255)
  created_at : DATETIME
}

entity "products" as products {
  * id : INT <<PK>>
  --
  sku : VARCHAR(50) <<unique>>
  name : VARCHAR(255)
  category_id : INT <<FK>>
  supplier_id : INT <<FK>>
  unit_price : DECIMAL(10,2)
  quantity_in_stock : INT
  reorder_level : INT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "stock_movements" as stock_movements {
  * id : INT <<PK>>
  --
  product_id : INT <<FK>>
  change_qty : INT
  movement_type : ENUM
  reference : VARCHAR(100)
  created_by : INT <<FK>>
  created_at : DATETIME
}

' ===================== STAFF (shared) =====================
entity "users" as users {
  * id : INT <<PK>>
  --
  name : VARCHAR(255)
  email : VARCHAR(255) <<unique>>
  password_hash : VARCHAR(255)
  role : ENUM
  created_at : DATETIME
}

' ===================== SALES MODULE =====================
entity "sales" as sales {
  * id : INT <<PK>>
  --
  cashier_id : INT <<FK>>
  sale_date : DATETIME
  total_amount : DECIMAL(10,2)
  status : ENUM
}

entity "sale_items" as sale_items {
  * id : INT <<PK>>
  --
  sale_id : INT <<FK>>
  product_id : INT <<FK>>
  quantity : INT
  unit_price : DECIMAL(10,2)
  subtotal : DECIMAL(10,2)
}

entity "payments" as payments {
  * id : INT <<PK>>
  --
  sale_id : INT <<FK, unique>>
  momo_reference : VARCHAR(100)
  amount : DECIMAL(10,2)
  method : ENUM
  status : ENUM
  paid_at : DATETIME
}

entity "demand_forecasts" as demand_forecasts {
  * id : INT <<PK>>
  --
  product_id : INT <<FK>>
  forecast_date : DATE
  predicted_quantity : INT
  model_version : VARCHAR(20)
  created_at : DATETIME
}

' ===================== PAYROLL MODULE =====================
entity "payroll_runs" as payroll_runs {
  * id : INT <<PK>>
  --
  period_start : DATE
  period_end : DATE
  run_date : DATETIME
  status : ENUM
  created_by : INT <<FK>>
}

entity "payslips" as payslips {
  * id : INT <<PK>>
  --
  payroll_run_id : INT <<FK>>
  staff_id : INT <<FK>>
  base_salary : DECIMAL(10,2)
  deductions : DECIMAL(10,2)
  net_pay : DECIMAL(10,2)
  momo_reference : VARCHAR(100)
  status : ENUM
}

' ===================== RELATIONSHIPS =====================
categories ||--o{ products : classifies
suppliers  ||--o{ products : supplies
products   ||--o{ stock_movements : "tracked by"
users      ||--o{ stock_movements : records
users      ||--o{ sales : processes
sales      ||--o{ sale_items : contains
products   ||--o{ sale_items : "sold as"
sales      ||--|| payments : "paid via"
products   ||--o{ demand_forecasts : "forecasted for"
users      ||--o{ payroll_runs : creates
payroll_runs ||--o{ payslips : generates
users      ||--o{ payslips : receives

@enduml
